--- a/SmartClock/Base.lproj/Main.storyboard
+++ b/SmartClock/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Zw3-Hm-s2x">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Zw3-Hm-s2x">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--View Controller - Alarm-->
@@ -160,9 +160,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="bWM-Oa-gEz"/>
                     <connections>
+                        <outlet property="alarmButton" destination="wg7-2Z-Hf3" id="Hm5-M1-jQ6"/>
                         <outlet property="alarmTime" destination="rnv-L7-EuU" id="R2e-z9-4Q8"/>
                         <outlet property="alarmTimeZone" destination="QCF-AA-wAj" id="Kfb-QU-hEL"/>
                         <outlet property="dialogue" destination="djP-e1-6gK" id="zd8-Cb-KWD"/>
+                        <outlet property="settingsButton" destination="DzO-C6-Y0U" id="9Ob-h7-LNC"/>
                         <outlet property="spriteFace" destination="Qq6-Is-z18" id="ica-yj-3fH"/>
                     </connections>
                 </viewController>
